--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -197,36 +197,17 @@
                  style="background: {{ marquee_config.custom_bg_color }}; border-color: {{ marquee_config.custom_bg_color }};"
                  {% endif %}>
                 <div class="marquee-wrapper {{ marquee_config.get_speed_class() }}">
-                    <!-- Bản copy 1 -->
-                    <span class="marquee-content">
-                        <span class="marquee-icon"
-                              {% if marquee_config.theme == 'custom' %}
-                              style="color: {{ marquee_config.custom_icon_color }};"
-                              {% endif %}>
-                            <i class="bi {{ marquee_config.icon }}"></i>
-                        </span>
-                        <span class="marquee-text"
-                            {% if marquee_config.theme == 'custom' %}
-                              style="color: {{ marquee_config.custom_text_color }};"
-                            {% endif %}>
-                            {{ marquee_config.text }}
-                        </span>
+                    <span class="preview-icon"
+                          {% if marquee_config.theme == 'custom' %}
+                          style="color: {{ marquee_config.custom_icon_color }};"
+                          {% endif %}>
+                        <i class="bi {{ marquee_config.icon }}"></i>
                     </span>
-
-                    <!-- Bản copy 2 - QUAN TRỌNG -->
-                    <span class="marquee-content">
-                        <span class="marquee-icon"
-                              {% if marquee_config.theme == 'custom' %}
-                              style="color: {{ marquee_config.custom_icon_color }};"
-                              {% endif %}>
-                            <i class="bi {{ marquee_config.icon }}"></i>
-                        </span>
-                        <span class="marquee-text"
-                            {% if marquee_config.theme == 'custom' %}
-                              style="color: {{ marquee_config.custom_text_color }};"
-                            {% endif %}>
-                            {{ marquee_config.text }}
-                        </span>
+                    <span class="marquee-text"
+                          {% if marquee_config.theme == 'custom' %}
+                          style="color: {{ marquee_config.custom_text_color }};"
+                          {% endif %}>
+                        {{ marquee_config.text }}
                     </span>
                 </div>
 
