--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -502,6 +502,10 @@
                     <i class="bi bi-megaphone-fill" style="color: #f093fb;"></i>
                     <span>Thông Báo Chạy Ngang</span>
                 </a>
+                <a href="{{ url_for('tasks.tv_display') }}" class="sidebar-menu-item" target="_blank">
+                    <i class="bi bi-tv-fill" style="color: #ff6b6b;"></i>
+                    <span>TV Display</span>
+                </a>
             </div>
         </div>
 
