--- a/app/templates/tv_display.html
+++ b/app/templates/tv_display.html
@@ -548,7 +548,7 @@
             <div class="tv-section">
                 <div class="tv-section-title">
                     <i class="bi bi-trophy-fill"></i>
-                    Top Performers (7 ngày qua)
+                    Nhân Viên Xuất Sắc trong vòng 7 ngày qua
                 </div>
                 <div class="tv-section-content">
                     {% if top_performers %}
